[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
dirs = "4.0.0"
iced = { version = "0.10", features = ["debug", "image", "advanced", "system", "svg"] }
iced_core = "0.10.0"
iced_native = "0.10.3"
image = "0.24.7"
winapi = { version = "0.3.9", features = [] }
warp = "0.3.6"
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = "0.8.1"
futures = "0.3.30"